Fix bug with header bar causing overflow-x when browser viewport has permanent scrollbars

--- a/redbrick/style.scss
+++ b/redbrick/style.scss
@@ -278,7 +278,7 @@ header {
      */
     z-index: 999;
     
-    width: 100vw;
+    width: 100%;
     height: $header-height;
 
     background-color: $header-footer-bg-color;
